# DevMate_wsp

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  config.toml  docker-compose.yml  pyproject.toml  requirements.md
src/devmate/: __init__.py  __main__.py  cli.py  config.py  embeddings.py  llm_factory.py  local_python_tool.py  logging_config.py  mcp_server.py  observability.py  prompts.py  rag.py  runtime.py  schemas.py  search_service.py  skills.py  state_store.py  webapp.py  workflow.py
tests/: conftest.py  test_cli_state.py  test_local_python_tool.py  test_runtime_readonly_tools.py  test_style_and_syntax.py  test_webapp_state.py  test_workflow_builder_prompt.py
